--- a/bt4.html
+++ b/bt4.html
@@ -70,6 +70,7 @@
         <label for="">What would you pay for the new product?</label>
         <br />
         $ <input type="text" /> . <input type="text" />
+        <p>$Dollars.Cents</p>
       </div>
       <div>
         <label for=""
