--- a/bt4.html
+++ b/bt4.html
@@ -33,7 +33,7 @@
         </select>
       </div>
       <div>
-        <label for="">Gender Identity</label>
+        <label for=""><b>Gender Identity</b></label>
         <br />
         <input type="radio" /> Male
         <br />
@@ -47,8 +47,8 @@
       </div>
       <div>
         <label for=""
-          >Which of the following products have your purchased in the last 2
-          months. Please check all that apply.</label
+          ><b>Which of the following products have your purchased in the last 2
+          months. Please check all that apply.</b></label
         >
         <br />
         <input type="radio" /> Product 1
@@ -58,7 +58,8 @@
         <input type="radio" /> Product 2
       </div>
       <div>
-        <label for="">How often would you use our new product?</label>
+        <label for=""><b>How often would you use our new product?</b></label>
+        <br>
         <input type="radio" /> Daily
         <br />
         <input type="radio" /> Weekly
@@ -67,22 +68,22 @@
         <br />
       </div>
       <div>
-        <label for="">What would you pay for the new product?</label>
+        <label for=""><b>What would you pay for the new product?</b></label>
         <br />
         $ <input type="text" /> . <input type="text" />
         <p>$Dollars.Cents</p>
       </div>
       <div>
         <label for=""
-          >What features would you like to see in the new product.</label
+          ><b>What features would you like to see in the new product.</b></label
         >
         <br />
         <textarea name="" id="" cols="50" rows="5"></textarea>
       </div>
       <div>
         <label for=""
-          >Please rate your level of agreement with the following
-          statements</label
+          ><b>Please rate your level of agreement with the following
+          statements</b></label
         >
       </div>
       <table>
